public/stylesheets/screen.css
/* ... */
#loginlogo {
  float: left;
  height: 190px;
  margin-top: 35px;
  width: 390px;
}

#loginform {
  float: left;
  padding: 0 20px;
}

#loginform legend {
  color: rgb(127, 196, 67);
  font-size: 1.8em;
  padding-bottom: 15px;
  text-shadow: 1px 1px 0 rgba(26, 26, 26, 0.6);
}

#loginform label {
  color: #fff;
  display: block;
  font-size:1.2em;
  font-weight: bold;
  text-shadow: 0 1px 1px rgba(0,0,0,.25);
}

#loginform label abbr {
  display: none; /*gets rid of useless asterisk*/
}

#loginform .input {
  border: 0px;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  box-shadow: 0 1px 1px 0 rgba(26, 26, 26, 0.6) inset;
  -moz-box-shadow: 0 1px 1px 0 rgba(26, 26, 26, 0.6) inset;
  -webkit-box-shadow: 0 1px 1px 0 rgba(26, 26, 26, 0.6) inset;
  color: #232323;
  font-size: 1.4em;
  margin-bottom: 12px;
  padding: 8px 10px;
  text-shadow: 0 0 1px rgba(0,0,0,.25);
  width: 380px;
}

#loginform fieldset.buttons .green-submit {
  margin-top: 5px;
}

.green-submit {
  min-height: 38px;
  padding: 7px 15px;
  text-shadow: 0 -1px 0 rgba(0,0,0,.25);
}

.cancel-button {
  text-decoration: none;
}

.cancel-button,
.green-submit {
  background: #5aa52b;
  background: -moz-linear-gradient(center bottom, rgb(27,112,4) 4%, rgb(90,165,43) 58%, rgb(144,207,76) 98%);
  background: -webkit-gradient(linear,left bottom,left top, color-stop(0.04, rgb(27,112,4)), color-stop(0.58, rgb(90,165,43)), color-stop(0.98, rgb(144,207,76)));
  border: 0;
  color: #fff;
  float: left;
  font-weight: bold;
  font-size: 16px;
  margin: 15px 0;
  text-shadow: 0 -1px 1px #2c5015;
}

.cancel-button:hover,
.green-submit:hover {
  border: 0 solid rgb(15, 18, 21);
  box-shadow: inset 1px 1px 5px 1px rgb(126, 229, 44), 0 1px 2px rgba(0,0,0, 1);
  -moz-box-shadow: inset 1px 1px 5px 1px rgb(126, 229, 44), 0 1px 2px rgba(0,0,0, 1);
  -webkit-box-shadow: inset 1px 1px 5px 1px rgb(126, 229, 44), 0 1px 2px rgba(0,0,0, 1);
  cursor: pointer;
}

.cancel-button.shadow,
.green-submit.shadow {
  box-shadow: 0 1.5px 2px 1px rgba(26, 26, 26, 0.9), 1px 1px 5px 1px rgb(98,179,34) inset !important;
  -moz-box-shadow: 0 1.5px 2px 1px rgba(26, 26, 26, 0.9), 1px 1px 5px 1px rgb(98,179,34) inset !important;
  -webkit-box-shadow: 0 1.5px 2px 1px rgba(26, 26, 26, 0.9), 1px 1px 5px 1px rgb(98,179,34) inset !important;
  margin: 25px 0 !important;
}

.cancel-button.shadow:hover,
.green-submit.shadow:hover {
  box-shadow: 1px 1px 5px 1px rgb(126, 229, 44) inset, 0 1.5px 2px 1px rgba(26, 26, 26, 0.9) !important;
  -moz-box-shadow: 1px 1px 5px 1px rgb(126, 229, 44) inset, 0 1.5px 2px 1px rgba(26, 26, 26, 0.9) !important;
  -webkit-box-shadow: 1px 1px 5px 1px rgb(126, 229, 44) inset, 0 1.5px 2px 1px rgba(26, 26, 26, 0.9) !important;
}

#import-roots-button {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 16px;
}

#loginform form {
  margin-bottom: 20px;
}

#loginform p {
  color: #bbb;
}

#loginform p a {
  color: #fff;
  text-decoration: none;
}

#loginform p a:hover {
  border-bottom: 1px dotted;
}

/* Sidebar Navigation */
/************************************************************************/
#navbar {
  background: #e6e6e6;
  font-weight: bold;
  height: 100%;
  min-height: 800px;
  left: 0;
  position: fixed;
  text-align: left;
  top: 0;
  width: 200px;
  z-index: 10;
}

#logo {
  color: rgb(142,155,162);
  padding: 20px 0 0  15px;
}

#nav {
  font-size: 14px;
  padding: 20px 0;
}

#nav ul li {
  background: #e9e9e9;
  line-height: 38px;
  padding: 0 26px 0 15px;
}

#nav li#active {
  background: url("../images/sidebar-active.png") no-repeat;
  border: none;
  color: white;
  line-height: 36px;
  position: relative;
  width: 175px;
  z-index: 100;
}

#nav li#active a {
  color: white;
}

#nav li:not(#active) {
  background: #e9e9e9;
  border-bottom: 1px solid #c2c6ca;
  position: relative;
  z-index: 10;
}

#nav a:link, #nav a:hover, #nav a:focus, #nav a:visited, #nav a:active {
  color: #000;
  display: block;
  text-decoration: none;
}

#nav ul li a {
  display: block;
}

#nav ul li span {
  display: block;
  padding: 0 0 0 25px;
}

#nav li .nav_master_tree {
  background: transparent url("/images/tree-nonactive.png") left center no-repeat;
}

#nav li#active .nav_master_tree {
  background: transparent url("/images/tree-active.png") left center no-repeat;
}

#nav li .nav_profile {
  background: transparent url("/images/profile-nonactive.png") left center no-repeat;
}

#nav li#active .nav_profile {
  background: transparent url("/images/profile-active.png") left center no-repeat;
}

.icon {
  float: left;
  margin: 11px 10px 0 0;
}

.hover {
  margin: 9px 10px 0 0;
}

#nav ul li ul {
  margin: 6px 0;
}

#nav ul li ul li {
  background: #efefef;
  color: #000;
  font-size: 12px;
  font-weight: normal;
  height: 30px;
  line-height: 32px;
  margin: 0 0 0 25px;
  overflow: hidden;
  padding: 0;
}

#nav li#active ul li a{
  color: #000;
}

#nav li#active ul li a:hover {
  color: #555;
}

#nav ul li#active ul li.active a{
  color: rgb(58, 114, 24);
  font-weight: bold;
}

#nav ul li ul, #nav ul li:first-child, #nav ul li#active ul li:first-child {
  border-top: none;
  border-bottom: none;
}

#nav ul li ul, #nav ul li ul li, #nav li:not(#active) ul li  {
  background: none !important; /*not sure why this needs important. better solution welcomed.*/
}

/* Main Tree Structure */
/************************************************************************/
.tree-column {
  float: left;
  height: 93%;
  width: 49%;
  min-width: 480px;
}

.tree-background {
  background: #fff;
  border: 0;
  min-height: 700px;
  width: 100%;
  height: 100%;
}

#treewrap-left {
  height: 90%;
  margin: 12px 20px 12px 40px;
}

#treewrap-right {
  height: 100%;
  margin: 12px 20px 12px 20px;
}

#tabs {
  height: 100%;
}

#tabs > div {
  height: 90%;
}

.tree-nav {
  font-size: 12px;
  height: 40px;
  margin-bottom: 10px;
  width: 100%;
}

.tree-nav ul {
  height: 40px;
  padding: 13px 0px;
}
/* ... */

